--- a/app/src/main/res/layout/fragment_lunch.xml
+++ b/app/src/main/res/layout/fragment_lunch.xml
@@ -5,10 +5,18 @@
     tools:context="com.locallinkonline.stcatherineschool.LunchFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
-        android:id="@+id/lunchTextView"
+        android:id="@+id/localLinkAd"
+        android:layout_width="match_parent"
+        android:layout_height="75px"
+        android:layout_above="@id/subjectsList"
+        android:layout_gravity="top"
+        android:text="@string/sample_ad" />
+
+    <ListView
+        android:id="@+id/lunchDetailsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_lunch_fragment" />
-
+        android:paddingTop="125px" />
 </FrameLayout>
