--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -9,7 +9,7 @@
         android:id="@+id/localLinkAd"
         android:layout_width="match_parent"
         android:layout_height="75px"
-        android:layout_above="@id/subjectsList"
+        android:layout_above="@id/homeworkByGrade"
         android:layout_gravity="top"
         android:text="@string/sample_ad" />
 
