--- a/app/src/main/res/layout/school_activity_layout.xml
+++ b/app/src/main/res/layout/school_activity_layout.xml
@@ -6,29 +6,15 @@
     android:layout_height="match_parent"
     tools:layout_editor_absoluteY="81dp">
 
-    <TextView
-        android:id="@+id/adTextView"
-        android:layout_width="371dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Ad Goes here"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Ad goes here" />
 
     <TextView
         android:id="@+id/activityTextView"
         android:layout_width="300dp"
         android:layout_height="39dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Loading..."
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/adTextView"
         tools:layout_editor_absoluteX="42dp"
         tools:text="School Activity" />
 
