--- a/app/src/main/res/layout/fragment_subject_homework.xml
+++ b/app/src/main/res/layout/fragment_subject_homework.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:id="@+id/homeworkLocalLinkAd"
+        android:id="@+id/localLinkAdBusiness"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
