--- a/app/src/main/res/layout/fragment_subject_homework.xml
+++ b/app/src/main/res/layout/fragment_subject_homework.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.locallinkonline.stcatherineschool.SubjectHomeworkFragment"
+    tools:context="com.locallinkonline.stcatherineschool.fragment.SubjectHomeworkFragment"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
