Upgrading to Material Components and using androidX over the old style support libraries

--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -1,22 +1,26 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.locallinkonline.stcatherineschool.fragment.ActivitiesFragment">
+    android:orientation="vertical"
+    tools:context="com.locallinkonline.stcatherineschool.fragment.SelectActivityFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/localLinkAd"
+        android:id="@+id/localLinkAdBusiness"
         android:layout_width="match_parent"
-        android:layout_height="75px"
-        android:layout_above="@id/homeworkByGrade"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_gravity="top"
-        android:text="@string/sample_ad" />
+        android:text="@string/sample_ad"
+        android:textColor="@android:color/black"
+        android:includeFontPadding="false"
+        android:gravity="top"
+        android:textSize="18sp" />
 
     <ListView
         android:id="@+id/activitiesList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="125px" />
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+</LinearLayout>
