--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -2,10 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
     android:orientation="vertical"
     tools:context="com.locallinkonline.stcatherineschool.fragment.SelectActivityFragment">
 
-    <include layout="@layout/ad_unit"/>
+    <include layout="@layout/ad_unit" />
+
     <ListView
         android:id="@+id/activitiesList"
         android:layout_width="match_parent"
