--- a/app/src/main/res/layout/fragment_activities_results.xml
+++ b/app/src/main/res/layout/fragment_activities_results.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.locallinkonline.stcatherineschool.fragment.LunchFragment"
-android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
+    android:orientation="vertical"
+    tools:context="com.locallinkonline.stcatherineschool.fragment.LunchFragment">
     <include layout="@layout/ad_unit"/>
     <ListView
         android:id="@+id/activitiesResultsListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
