--- a/app/src/main/res/layout/fragment_grades_homework.xml
+++ b/app/src/main/res/layout/fragment_grades_homework.xml
@@ -10,7 +10,7 @@
         android:id="@+id/homeworkGradesListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_marginRight="@dimen/activity_vertical_margin"/>
