--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <group android:checkableBehavior="single">
+    <!--<item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="Home" /> -->
     <item
         android:id="@+id/navigation_homework"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_school_black_24dp"
         android:title="@string/title_home" />
 
     <item
@@ -15,5 +19,7 @@
         android:id="@+id/navigation_lunch"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+
+    </group>
 
 </menu>
