--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -18,7 +18,7 @@
     <item
         android:id="@+id/navigation_lunch"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/lunch_title" />
 
     </group>
 
