--- a/app/src/main/res/layout/fragment_lunch.xml
+++ b/app/src/main/res/layout/fragment_lunch.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10px"
+        android:paddingTop="10dp"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
