--- a/app/src/main/res/layout/standard_list_layout.xml
+++ b/app/src/main/res/layout/standard_list_layout.xml
@@ -10,7 +10,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/standard_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
