--- a/app/src/main/res/layout/school_activity_layout.xml
+++ b/app/src/main/res/layout/school_activity_layout.xml
@@ -7,22 +7,10 @@
     android:layout_marginTop="?attr/actionBarSize"
     tools:layout_editor_absoluteY="81dp">
 
-
-    <TextView
-        android:id="@+id/activityTextView"
-        android:layout_width="300dp"
-        android:layout_height="39dp"
-        android:text="Loading..."
-        android:textAlignment="center"
-        android:textColor="@android:color/background_dark"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="42dp"
-        tools:text="School Activity" />
-
     <TextView
         android:id="@+id/announcementDataTV"
-        android:layout_width="372dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -35,8 +23,8 @@
 
     <TextView
         android:id="@+id/notesDataTV"
-        android:layout_width="368dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -85,8 +73,8 @@
 
     <TextView
         android:id="@+id/regScheduleDataTV"
-        android:layout_width="359dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -111,8 +99,8 @@
 
     <TextView
         android:id="@+id/performanceSchedDataTV"
-        android:layout_width="361dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
