--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,13 +11,9 @@
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" /> -->
         <item
-            android:id="@+id/navigation_homework"
-            android:icon="@drawable/ic_school_black_24dp"
-            android:title="@string/homework_title" />
-        <item
-            android:id="@+id/navigation_activities"
+            android:id="@+id/navigation_school_schedule"
             android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/activities_title" />
+            android:title="@string/school_schedule_title" />
         <item
             android:id="@+id/navigation_lunch"
             android:icon="@drawable/ic_notifications_black_24dp"
