Adding Description to scheduleview and animation to show it

--- a/locallinkschool/src/main/res/layout/standard_schedule_item_layout.xml
+++ b/locallinkschool/src/main/res/layout/standard_schedule_item_layout.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scheduleCard"
     style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/mtrl_card_spacing"
     android:layout_marginRight="@dimen/mtrl_card_spacing"
-    android:layout_marginTop="@dimen/mtrl_card_spacing"
-    android:id="@+id/scheduleCard"
-    >
+    android:layout_marginTop="@dimen/mtrl_card_spacing">
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
@@ -53,5 +55,24 @@
             android:textColor="@android:color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
+        <TextView
+            android:id="@+id/scheduleDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/abhaya_libre"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="gone"/>
     </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/displayDescriptionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:background="@android:color/background_light"
+        android:visibility="visible"
+        app:icon="@drawable/ic_expand_more_black_24dp"
+        android:text="MORE"/>
 </com.google.android.material.card.MaterialCardView>
