Added Twitter feed support Back Button works properly now

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -21,4 +21,14 @@
 
     </group>
 
+    <item android:title="Social">
+        <menu>
+            <item
+                android:id="@+id/navigation_twitter"
+                android:icon="@drawable/ic_icons8_twitter"
+                android:title="Twitter" />
+        </menu>
+    </item>
+
+
 </menu>
