--- a/locallinkschool/src/main/res/layout/ad_unit.xml
+++ b/locallinkschool/src/main/res/layout/ad_unit.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/mtrl_card_spacing"
+    android:layout_marginTop="@dimen/mtrl_card_spacing"
     android:layout_marginRight="@dimen/mtrl_card_spacing"
-    android:layout_marginTop="@dimen/mtrl_card_spacing">
+    app:cardBackgroundColor="#E5E7E9">
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,9 +35,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/localLinkAdBusiness"
             android:layout_gravity="top"
-            android:layout_marginBottom="1dp"
             android:layout_marginLeft="14sp"
             android:layout_marginRight="14sp"
+            android:layout_marginBottom="1dp"
             android:gravity="top"
             android:includeFontPadding="true"
             android:textColor="@android:color/secondary_text_light"
